flux-clusters/dev-cluster/flux-system/deployment_kcna.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kcna
  name: kcna
spec:
  replicas: 4
  selector:
    matchLabels:
      app: kcna
  strategy: {}
  template:
    metadata:
      labels:
        app: kcna
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
