flux-clusters/dev-cluster/flux-system/deploymentkcna.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kcna
  name: kcna
  namespace: wave2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kcna
  strategy: {}
  template:
    metadata:
      labels:
        app: kcna
    spec:
      containers:
      - image: busybox
        name: nginx
        resources: {}
status: {}
